Adapt population to phenotypes distribution + debug + adjency matrix + start interaction

--- a/parameters.yaml
+++ b/parameters.yaml
@@ -1,6 +1,6 @@
 # WAML document with parameters of the simulation
 
-Number of iteraction: 1
+Number of interaction: 1
 Community size: 10
 Community minimum: 0.8
 Temperature: 0
