Rework of all the graph structure

--- a/parameters.yaml
+++ b/parameters.yaml
@@ -2,9 +2,9 @@
 
 Number of interaction: 1
 Community size: 10
-Community minimum: 0.8
+Link minimum: 1
 Temperature: 0
-Cognitive capacity: 3
+Cognitive capacity: 5
 
 Strategy distributions:
   Trustful: 0.17
