--- a/parameters.yaml
+++ b/parameters.yaml
@@ -1,19 +1,15 @@
 # WAML document with parameters of the simulation
 # Simulation parameters
-Number of interaction: 100000
-Output directory: "./out/group_of_5/"
+Number of interaction: 30000
+Output directory: "./out/empty_simple_poisson/"
 
 # Model parameters
 Community size: 75
-Link minimum: 5
-Cognitive capacity: 50
+Link minimum: 1000
+Cognitive capacity: 1000
 Temperature: 0
 
 # Valid phenotypes (with caps): Trustful, Random, Optimistic, Pessimist, Envious
 Strategy distributions:
-  Envious: 0.3
-  Optimist: 0.2
-  Pessimist: 0.21
-  Random: 0.12
-  Trustful: 0.17
+  Pessimist: 1
  
