--- a/parameters.yaml
+++ b/parameters.yaml
@@ -1,12 +1,13 @@
 # WAML document with parameters of the simulation
 # Simulation parameters
 Number of interaction: 100000
-Output directory: "./out/empty_simple_poisson_capa/"
+Output directory: "./out/empty_trust_total/"
 
 # Model parameters
 Community size: 75
 Link minimum: 5
 Cognitive capacity: 50
+Heuristic: "Trust" # Among "Simple", "Complex", "Trust"
 Temperature: 0
 
 # Valid phenotypes (with caps): Trustful, Random, Optimistic, Pessimist, Envious
