Debug mismatch network and stack

--- a/parameters.yaml
+++ b/parameters.yaml
@@ -1,12 +1,12 @@
 # WAML document with parameters of the simulation
 # Simulation parameters
-Number of interaction: 100000
-Output directory: "./out/empty_trust_total/"
+Number of interaction: 200000
+Output directory: "./out/empty_trust_total_C750_Th10/"
 
 # Model parameters
 Community size: 75
-Link minimum: 5
-Cognitive capacity: 50
+Link minimum: 10
+Cognitive capacity: 750
 Heuristic: "Trust" # Among "Simple", "Complex", "Trust"
 Temperature: 0
 
