--- a/parameters.yaml
+++ b/parameters.yaml
@@ -1,16 +1,20 @@
 # WAML document with parameters of the simulation
 # Simulation parameters
-Number of interaction: 100000
-Output directory: "./out/empty_trust_optimist_C750_Th5/"
+Number of interaction: 1000000
+Output directory: "./out/empty_trust_total_C750_Th10_T0.7/"
 
 # Model parameters
 Community size: 75
-Link minimum: 5
+Link minimum: 10
 Cognitive capacity: 750
-Heuristic: "Trust" # Among "Simple", "Complex", "Trust"
-Temperature: 0
+Heuristic: "RTH" # Among "SITH", "Complex", "RTH"
+Temperature: 0.7
 
 # Valid phenotypes (with caps): Trustful, Random, Optimistic, Pessimist, Envious
 Strategy distributions:
-  Optimist: 1
+  Envious: 0.3
+  Optimist: 0.2
+  Pessimist: 0.21
+  Random: 0.12
+  Trustful: 0.17
  
