Name generation change + minor changes

--- a/parameters.yaml
+++ b/parameters.yaml
@@ -1,10 +1,10 @@
 # YAML document with parameters of the simulation
 # Simulation parameters
-Number of interaction: 5000000
+Number of interaction: 1000000
 Output directory: "./out/"
 # Define the way we want to save the simulation:
 # Among "Stack" (using OperationStack), "Last" (Only final state), "Freq" (TODO), "Off" (No save)
-Save mode: "Last"
+Save mode: "Stack"
 Verbose: True # Default True
 
 # Initial condition
@@ -14,10 +14,10 @@ Verbose: True # Default True
 Init: "Empty"
 
 # Model parameters
-Community size: 75
+Community size: 220
 Link minimum: 10
 Cognitive capacity: 750
-Heuristic: "SITH" # Among "SITH", "Complex", "RTH"
+Heuristic: "RTH" # Among "SITH", "Complex", "RTH"
 Temperature: 0.25
 
 # Valid phenotypes (with caps): Trustful, Random, Optimistic, Pessimist, Envious
