--- a/parameters.yaml
+++ b/parameters.yaml
@@ -1,11 +1,11 @@
 # YAML document with parameters of the simulation
 # Simulation parameters
-Number of interaction: 1000000
-Output directory: "./out/statistical_sith/"
+Number of interaction: 157905
+Output directory: "./out/size_effect_sith/"
 # Define the way we want to save the simulation:
 # Among "Stack" (using OperationStack), "Last" (Only final state), "Freq" (TODO), "Off" (No save)
 Save mode: "Last"
-Verbose: False # Default True
+Verbose: True # Default True
 # "Seed" must be a number
 
 # Initial condition
@@ -14,7 +14,7 @@ Verbose: False # Default True
 Init: "Empty"
 
 # Model parameters
-Community size: 75
+Community size: 30
 Link minimum: 10
 Cognitive capacity: 750
 Heuristic: "SITH" # Among "SITH", "Complex", "RTH"
