--- a/parameters.yaml
+++ b/parameters.yaml
@@ -1,6 +1,6 @@
 # YAML document with parameters of the simulation
 # Simulation parameters
-Number of interaction: 157905
+Number of interaction: 1147080
 Output directory: "./out/size_effect_sith/"
 # Define the way we want to save the simulation:
 # Among "Stack" (using OperationStack), "Last" (Only final state), "Freq" (TODO), "Off" (No save)
@@ -14,7 +14,7 @@ Verbose: True # Default True
 Init: "Empty"
 
 # Model parameters
-Community size: 30
+Community size: 80
 Link minimum: 10
 Cognitive capacity: 750
 Heuristic: "SITH" # Among "SITH", "Complex", "RTH"
