--- a/parameters.yaml
+++ b/parameters.yaml
@@ -1,7 +1,7 @@
 # YAML document with parameters of the simulation
 # Simulation parameters
-Number of interaction: 1147080
-Output directory: "./out/size_effect_sith/"
+Number of interaction: 444675
+Output directory: "./out/cog_effect_sith/"
 # Define the way we want to save the simulation:
 # Among "Stack" (using OperationStack), "Last" (Only final state), "Freq" (TODO), "Off" (No save)
 Save mode: "Last"
@@ -14,9 +14,9 @@ Verbose: True # Default True
 Init: "Empty"
 
 # Model parameters
-Community size: 80
+Community size: 50
 Link minimum: 10
-Cognitive capacity: 750
+Cognitive capacity: 500
 Heuristic: "SITH" # Among "SITH", "Complex", "RTH"
 Temperature: 0.25
 
