--- a/parameters.yaml
+++ b/parameters.yaml
@@ -1,7 +1,7 @@
 # YAML document with parameters of the simulation
 # Simulation parameters
 Number of interaction: 444675
-Output directory: "./out/last/"
+Output directory: "./out/test/"
 # Define the way we want to save the simulation:
 # Among "Stack" (using OperationStack), "Last" (Only final state), "Freq" (TODO), "Off" (No save)
 Save mode: "Last"
@@ -15,8 +15,12 @@ Init: "Empty"
 
 # Model parameters
 Community size: 50
-Link minimum: 10
-Cognitive capacity: 90
+Link minimum:
+  Mean: 10
+  Sigma: 2
+Cognitive capacity:
+  Mean: 200
+  Sigma: 50
 Heuristic: "SITH" # Among "SITH", "Complex", "RTH"
 Temperature: 0.25
 
